added HTML code

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-hello hello
-test test test
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+      <meta charset="utf-8" >
+      <title>My Cool Site</title>
+  </head>
+
+  <body>
+  </body>
+
+  </html>
